Fix switch and DoE filters scaling on mobiles

--- a/app/javascript/app/components/sectors-agriculture/countries-context/countries-context-styles.scss
+++ b/app/javascript/app/components/sectors-agriculture/countries-context/countries-context-styles.scss
@@ -157,7 +157,7 @@
   width: 100%;
 }
 
-@media #{$tablet-portrait} {
+@media #{$tablet-landscape} {
   .intro {
     @include columns((6 , 5));
 
